--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,6 @@ language: java
 
 dist: xenial
 
-branches:
-  except:
-      #- /^(?i:feature)-.*$/
-      #- /^(?i:release)-.*$/
-
 jdk:
   - openjdk11
   - openjdk-ea
@@ -45,11 +40,16 @@ deploy:
         tags: true
         jdk: openjdk11
 
-after_deploy:
-   - |
-       if [[ ($TRAVIS_BRANCH == master) &&
-             ($TRAVIS_PULL_REQUEST == false) ]] ; then
-         curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
-         # trigger upstream projects
-         sh trigger-travis.sh openbase bco $TRAVIS_ACCESS_TOKEN
-       fi
+jobs:
+  include:
+    - stage: trigger downstream
+      jdk: openjdk11
+      script: |
+        echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST"
+        if [[ ($TRAVIS_BRANCH == master) &&
+              ($TRAVIS_PULL_REQUEST == false) ]] ; then
+          curl -LO --retry 3 https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
+
+          # trigger upstream projects
+          sh trigger-travis.sh openbase bco $TRAVIS_ACCESS_TOKEN
+        fi
