--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,10 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>3.1.0</version>
+                        <configuration>
+                            <!-- workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 -->
+                            <source>8</source>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
