--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ language: java
 dist: xenial
 
 jdk:
-  - openjdk12
+  - openjdk11
+  - openjdk8
   - openjdk-ea
 
 matrix:
   allow_failures:
-  - jdk: openjdk-ea
+  - jdk:
+    - openjdk8
+    - openjdk-ea
 
 cache:
   directories:
@@ -46,11 +49,15 @@ jobs:
       stage: compile
       script: skip  # skip tests
     - <<: *compile
+      jdk: openjdk8
+    - <<: *compile
       jdk: openjdk-ea
     - &documentation
       stage: documentation
       install: skip # skip compile
       script: .travis/generate-doc.sh
+    - <<: *documentation
+      jdk: openjdk8
     - <<: *documentation
       jdk: openjdk-ea
     - stage: deploy
@@ -84,4 +91,3 @@ jobs:
               sh trigger-travis.sh openbase ${PROJECT} $TRAVIS_ACCESS_TOKEN
           done
         fi
-        
