--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,24 @@ language: java
 dist: xenial
 
 jdk:
-  - openjdk8
   - openjdk11
+  - openjdk8
   - openjdk-ea
 
+matrix:
+  allow_failures:
+  - jdk: openjdk8
+  - jdk: openjdk-ea
+
+cache:
+  directories:
+  - $HOME/.m2
+
 install:
-    - mvn --settings .travis/settings.xml install -DskipTests=true -Dmaven.javadoc.skip=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -B -U -V -q
+  - mvn --settings .travis/settings.xml install -DskipTests=true -Dmaven.javadoc.skip=true --batch-mode --update-snapshots --show-version --quiet
+
+script:
+  - mvn test -Dmaven.javadoc.skip=true --batch-mode --fail-fast # --quiet
 
 before_install:
   - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
@@ -23,28 +35,50 @@ notifications:
         on_success: change
         rooms:
             - openbase-org:vGz7LO4CvGoGMneYkEm3ON7E#build
-            #- openbase-org:vGz7LO4CvGoGMneYkEm3ON7E#bco-device
-
-deploy:
-  - provider: script
-    skip_cleanup: true
-    script: .travis/deploy.sh
-    on:
-        repo: openbase/bco.device
-        branch: master
-        jdk: openjdk11
-  - provider: script
-    skip_cleanup: true
-    script: .travis/deploy.sh
-    on:
-        repo: openbase/bco.device
-        tags: true
-        jdk: openjdk11
+stages:
+  - compile
+  - test
+  - documentation
+  - deploy
+  - trigger
 
 jobs:
   include:
-    - stage: trigger downstream
-      jdk: openjdk11
+    - &compile
+      stage: compile
+      script: skip  # skip tests
+    - <<: *compile
+      jdk: openjdk8
+    - <<: *compile
+      jdk: openjdk-ea
+    - &documentation
+      stage: documentation
+      install: skip # skip compile
+      script: .travis/generate-doc.sh
+    - <<: *documentation
+      jdk: openjdk8
+    - <<: *documentation
+      jdk: openjdk-ea
+    - stage: deploy
+      name: "Central Maven"
+      install: skip # skip compile
+      script: skip  # skip tests
+      deploy:
+      - provider: script
+        script: .travis/deploy.sh
+        skip_cleanup: true
+        on:
+            repo: ${REPO_ID}
+            branch: master
+      - provider: script
+        script: .travis/deploy.sh
+        skip_cleanup: true
+        on:
+            repo: ${REPO_ID}
+            tags: true
+    - stage: trigger
+      name: "Upstream Projects"
+      install: skip # skip compile
       script: |
         echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST"
         if [[ ($TRAVIS_BRANCH == master) &&
@@ -52,6 +86,7 @@ jobs:
           curl -LO --retry 3 https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
 
           # trigger upstream projects
-          sh trigger-travis.sh openbase bco.app $TRAVIS_ACCESS_TOKEN
+          for PROJECT in ${UPSTREAM_PROJECTS}; do
+              sh trigger-travis.sh openbase ${PROJECT} $TRAVIS_ACCESS_TOKEN
+          done
         fi
-        
