--- a/pom.xml
+++ b/pom.xml
@@ -124,14 +124,11 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
+                    <!-- plugin>
+                        disabled because of https://bugs.openjdk.java.net/browse/JDK-8212233
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>3.1.0</version>
-                        <configuration>
-                            <!-- workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 -->
-                            <source>8</source>
-                        </configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -140,7 +137,7 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin-->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
