--- a/influxdbconnector/pom.xml
+++ b/influxdbconnector/pom.xml
@@ -61,5 +61,10 @@
             <artifactId>bco.dal.control</artifactId>
             <version>${dependency.bco.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+            <version>2.15</version>
+        </dependency>
     </dependencies>
 </project>
