--- a/influxdbconnector/pom.xml
+++ b/influxdbconnector/pom.xml
@@ -55,6 +55,20 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>bonitoo-snapshot</id>
+            <name>Bonitoo.io snapshot repository</name>
+            <url>https://apitea.com/nexus/content/repositories/bonitoo-snapshot/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.openbase</groupId>
@@ -66,5 +80,11 @@
             <artifactId>influxdb-java</artifactId>
             <version>2.15</version>
         </dependency>
+        <dependency>
+            <groupId>org.influxdata</groupId>
+            <artifactId>influxdb-client-java</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
 </project>
