--- a/influxdbconnector/pom.xml
+++ b/influxdbconnector/pom.xml
@@ -71,6 +71,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+            <version>2.15</version>
+        </dependency>
+        <dependency>
             <groupId>org.openbase</groupId>
             <artifactId>bco.dal.control</artifactId>
             <version>${dependency.bco.version}</version>
