fix responsive style of action inspector

--- a/visual/pom.xml
+++ b/visual/pom.xml
@@ -154,5 +154,12 @@
             <version>${dependency.jul.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <!-- required for scenic view debugging -->
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>11.0.2</version>
+            <classifier>linux</classifier>
+        </dependency>
     </dependencies>
 </project>
