--- a/control/pom.xml
+++ b/control/pom.xml
@@ -55,7 +55,8 @@
                             </platforms>
                         </program>
                         <program>
-                            <mainClass>org.openbase.bco.dal.control.layer.unit.location.LocationManagerLauncher</mainClass>
+                            <mainClass>org.openbase.bco.dal.control.layer.unit.location.LocationManagerLauncher
+                            </mainClass>
                             <id>bco-manager-location</id>
                             <platforms>
                                 <platform>unix</platform>
@@ -76,7 +77,8 @@
                             </platforms>
                         </program>
                         <program>
-                            <mainClass>org.openbase.bco.dal.control.layer.unit.device.FallbackDeviceManagerLauncher</mainClass>
+                            <mainClass>org.openbase.bco.dal.control.layer.unit.device.FallbackDeviceManagerLauncher
+                            </mainClass>
                             <id>bco-manager-device-fallback</id>
                             <platforms>
                                 <platform>unix</platform>
@@ -104,6 +106,20 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>bonitoo-snapshot</id>
+            <name>Bonitoo.io snapshot repository</name>
+            <url>https://apitea.com/nexus/content/repositories/bonitoo-snapshot/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 
     <dependencies>
         <dependency>
