--- a/control/pom.xml
+++ b/control/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>bco.dal.control</artifactId>
@@ -55,8 +54,7 @@
                             </platforms>
                         </program>
                         <program>
-                            <mainClass>org.openbase.bco.dal.control.layer.unit.location.LocationManagerLauncher
-                            </mainClass>
+                            <mainClass>org.openbase.bco.dal.control.layer.unit.location.LocationManagerLauncher</mainClass>
                             <id>bco-manager-location</id>
                             <platforms>
                                 <platform>unix</platform>
@@ -77,8 +75,7 @@
                             </platforms>
                         </program>
                         <program>
-                            <mainClass>org.openbase.bco.dal.control.layer.unit.device.FallbackDeviceManagerLauncher
-                            </mainClass>
+                            <mainClass>org.openbase.bco.dal.control.layer.unit.device.FallbackDeviceManagerLauncher</mainClass>
                             <id>bco-manager-device-fallback</id>
                             <platforms>
                                 <platform>unix</platform>
@@ -106,6 +103,7 @@
             </plugin>
         </plugins>
     </build>
+
     <repositories>
         <repository>
             <id>bonitoo-snapshot</id>
@@ -119,7 +117,6 @@
             </snapshots>
         </repository>
     </repositories>
-
 
     <dependencies>
         <dependency>
